--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>test01</groupId>
     <artifactId>1</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>6.0.3</version>
+    </dependency>
 
 </project>
